--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "fe098558",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "[5 rows x 70 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,22 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1953c885",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load processed data\n",
-    "df_GDP = pd.read_csv('../data/raw/GDP.csv')\n",
-    "\n",
-    "print(f'Dataset shape: {df_GDP.shape}')\n",
-    "df_GDP.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "e1192ad8",
+   "id": "1953c885",
    "metadata": {},
    "outputs": [
     {
@@ -491,11 +477,401 @@
     "print(f'Dataset shape: {df_GDP.shape}')\n",
     "df_GDP.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e1192ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (266, 70)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Indicator Name</th>\n",
+       "      <th>Indicator Code</th>\n",
+       "      <th>1960</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>2023</th>\n",
+       "      <th>2024</th>\n",
+       "      <th>Unnamed: 69</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td>XKX</td>\n",
+       "      <td>GDP growth (annual %)</td>\n",
+       "      <td>NY.GDP.MKTP.KD.ZG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.571775</td>\n",
+       "      <td>4.825656</td>\n",
+       "      <td>3.406632</td>\n",
+       "      <td>4.756801</td>\n",
+       "      <td>-5.340275</td>\n",
+       "      <td>10.745656</td>\n",
+       "      <td>4.278499</td>\n",
+       "      <td>4.067627</td>\n",
+       "      <td>4.412738</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Yemen, Rep.</td>\n",
+       "      <td>YEM</td>\n",
+       "      <td>GDP growth (annual %)</td>\n",
+       "      <td>NY.GDP.MKTP.KD.ZG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9.375124</td>\n",
+       "      <td>-5.071796</td>\n",
+       "      <td>0.752448</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>ZAF</td>\n",
+       "      <td>GDP growth (annual %)</td>\n",
+       "      <td>NY.GDP.MKTP.KD.ZG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.844734</td>\n",
+       "      <td>6.177931</td>\n",
+       "      <td>7.373709</td>\n",
+       "      <td>7.939609</td>\n",
+       "      <td>6.122798</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.664552</td>\n",
+       "      <td>1.157947</td>\n",
+       "      <td>1.556784</td>\n",
+       "      <td>0.259936</td>\n",
+       "      <td>-6.168918</td>\n",
+       "      <td>4.955033</td>\n",
+       "      <td>1.911480</td>\n",
+       "      <td>0.698485</td>\n",
+       "      <td>0.579854</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>ZMB</td>\n",
+       "      <td>GDP growth (annual %)</td>\n",
+       "      <td>NY.GDP.MKTP.KD.ZG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.361382</td>\n",
+       "      <td>-2.490839</td>\n",
+       "      <td>3.272393</td>\n",
+       "      <td>12.214048</td>\n",
+       "      <td>16.647456</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.755100</td>\n",
+       "      <td>3.525863</td>\n",
+       "      <td>4.034494</td>\n",
+       "      <td>1.441306</td>\n",
+       "      <td>-2.785055</td>\n",
+       "      <td>6.234922</td>\n",
+       "      <td>5.211224</td>\n",
+       "      <td>5.367943</td>\n",
+       "      <td>4.043148</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>GDP growth (annual %)</td>\n",
+       "      <td>NY.GDP.MKTP.KD.ZG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.316157</td>\n",
+       "      <td>1.434471</td>\n",
+       "      <td>6.244345</td>\n",
+       "      <td>-1.106172</td>\n",
+       "      <td>4.910571</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.755794</td>\n",
+       "      <td>4.734411</td>\n",
+       "      <td>5.009921</td>\n",
+       "      <td>-6.332450</td>\n",
+       "      <td>-7.816933</td>\n",
+       "      <td>8.468039</td>\n",
+       "      <td>6.139176</td>\n",
+       "      <td>5.336770</td>\n",
+       "      <td>2.029484</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country Name Country Code         Indicator Name     Indicator Code  \\\n",
+       "261        Kosovo          XKX  GDP growth (annual %)  NY.GDP.MKTP.KD.ZG   \n",
+       "262   Yemen, Rep.          YEM  GDP growth (annual %)  NY.GDP.MKTP.KD.ZG   \n",
+       "263  South Africa          ZAF  GDP growth (annual %)  NY.GDP.MKTP.KD.ZG   \n",
+       "264        Zambia          ZMB  GDP growth (annual %)  NY.GDP.MKTP.KD.ZG   \n",
+       "265      Zimbabwe          ZWE  GDP growth (annual %)  NY.GDP.MKTP.KD.ZG   \n",
+       "\n",
+       "     1960      1961      1962      1963       1964       1965  ...      2016  \\\n",
+       "261   NaN       NaN       NaN       NaN        NaN        NaN  ...  5.571775   \n",
+       "262   NaN       NaN       NaN       NaN        NaN        NaN  ... -9.375124   \n",
+       "263   NaN  3.844734  6.177931  7.373709   7.939609   6.122798  ...  0.664552   \n",
+       "264   NaN  1.361382 -2.490839  3.272393  12.214048  16.647456  ...  3.755100   \n",
+       "265   NaN  6.316157  1.434471  6.244345  -1.106172   4.910571  ...  0.755794   \n",
+       "\n",
+       "         2017      2018      2019      2020       2021      2022      2023  \\\n",
+       "261  4.825656  3.406632  4.756801 -5.340275  10.745656  4.278499  4.067627   \n",
+       "262 -5.071796  0.752448       NaN       NaN        NaN       NaN       NaN   \n",
+       "263  1.157947  1.556784  0.259936 -6.168918   4.955033  1.911480  0.698485   \n",
+       "264  3.525863  4.034494  1.441306 -2.785055   6.234922  5.211224  5.367943   \n",
+       "265  4.734411  5.009921 -6.332450 -7.816933   8.468039  6.139176  5.336770   \n",
+       "\n",
+       "         2024  Unnamed: 69  \n",
+       "261  4.412738          NaN  \n",
+       "262       NaN          NaN  \n",
+       "263  0.579854          NaN  \n",
+       "264  4.043148          NaN  \n",
+       "265  2.029484          NaN  \n",
+       "\n",
+       "[5 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load processed data\n",
+    "df_GDP = pd.read_csv('../data/raw/GDP.csv')\n",
+    "\n",
+    "print(f'Dataset shape: {df_GDP.shape}')\n",
+    "df_GDP.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "368030b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load processed data\n",
+    "df = pd.read_csv('../data/raw/GDP.csv')\n",
+    "\n",
+    "print(f'Dataset shape: {df_GDP.shape}')\n",
+    "df_GDP.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c939a59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (14364, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5057, 6)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load processed data\n",
+    "df = pd.read_csv('../data/processed/macroeconomic.csv')\n",
+    "print(f'Dataset shape: {df.shape}')\n",
+    "df.head()\n",
+    "df_clean = df.dropna()\n",
+    "df_clean.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84a85588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Growth</th>\n",
+       "      <th>Inflation</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>16.078431</td>\n",
+       "      <td>4.032258</td>\n",
+       "      <td>6.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>16.078431</td>\n",
+       "      <td>4.032258</td>\n",
+       "      <td>6.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>16.078431</td>\n",
+       "      <td>4.032258</td>\n",
+       "      <td>6.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>16.078431</td>\n",
+       "      <td>4.032258</td>\n",
+       "      <td>6.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>16.078431</td>\n",
+       "      <td>4.032258</td>\n",
+       "      <td>6.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country Name Country Code  Year  GDP_Growth  Inflation  Unemployment\n",
+       "0        Aruba          ABW  1971   16.078431   4.032258          6.08\n",
+       "1        Aruba          ABW  1972   16.078431   4.032258          6.08\n",
+       "2        Aruba          ABW  1973   16.078431   4.032258          6.08\n",
+       "3        Aruba          ABW  1974   16.078431   4.032258          6.08\n",
+       "4        Aruba          ABW  1975   16.078431   4.032258          6.08"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for col in ['GDP_Growth', 'Inflation', 'Unemployment']:\n",
+    "    df[col] = df.groupby('Country Code')[col].transform(lambda x: x.interpolate(limit_direction='both').fillna(x.mean()))\n",
+    "df.shape\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "462eafde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.2)",
+   "display_name": "newenv",
    "language": "python",
    "name": "python3"
   },
